# ebt-translations

./: .gitignore  AGENTS.md  CODEX.md  README.md  coverage_exact.py  pyproject.toml
agents/: AGENTS.md  CLAUDE.md  GEMINI.md
docs/: ARCHITECTURE.md  DATA_SOURCES.md
docs/plans/: 2026-03-31-portable-uv-setup.md
ebt-db-scripts/: COMPLETE_DATABASE_SUMMARY.txt  build_unified_db.py  check_coverage.py  check_unified_schema.py  download_massive_table.py  enhance_coverage.py  extract_bw2_kn.py  extract_bw2_sn_an.py  extract_sc_local.py  gap_analysis.py  gap_analysis_advanced.py  gap_fill.py  gap_fill_source.py  improve_coverage.py  merge_dt_standalone.py  merge_into_unified.py  run_ati_expansion.py  run_dt_ati_expansion.py  run_expansion.py  run_ingestion.py  run_pau_linker_final.py  run_pipeline.py  run_quality.py  run_tpk_mapper.py  run_unified_pipeline.py  scrape_all_sources.py  scrape_dt.py  scrape_dt_standalone.py  scrape_missing.py  scrape_sc_github.py  scrape_tipitaka.py  scrape_tp.py  stats_full.py
ebt_translations/: __init__.py  downloads.py  paths.py  pipeline.py  unified_query.py
ebt_translations/ai/: __init__.py  aggregator.py  ai_detector.py  chunker.py  config.py  ollama_client.py  pipeline.py  regex_detector.py  validator.py
ebt_translations/coverage/: __init__.py  coverage_analyzer.py  coverage_report.py
ebt_translations/expansion/: __init__.py  ati_expander.py  dt_ati_expander.py  source_expander.py  (+2 more)
kamma/: project.md  tech.md  threads.md  workflow.md
tests/: test_download_and_pipeline.py  test_paths.py  test_readme.py  test_scripts_portability.py
(+27 files in other folders)
