[project]
name = "ebt-translations"
version = "0.1.0"
description = "Portable tooling for collecting and consolidating Early Buddhist Text translations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ebt_translations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
